# actix-sse-pubsub

./: .gitignore  Cargo.toml  README.md  benchmark.js  benchmark.py
src/: index.html  main.rs
