[package]
name = "mysse"
version = "1.0.0"
authors = ["Arve Seljebu", "Ronak Badhe"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features = ["openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "= 0.4.29" }
env_logger = "0.7"
futures = "0.3.1"
tokio = { version="0.2", features=["full"] }
actix-cors="0.2.0"
clap = "2.33.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]
